refactor: integrate MongoServiceClient for data handling in fraud detection services